<resources>
    <string name="app_name">Менеджер паролей</string>

    <!--Home-->
    <string name="my_notes">Мои пароли</string>
    <string name="my_notes_desc">список ваших паролей</string>
    <string name="settings">Настройки</string>
    <string name="settings_desc">синхронизация, доступ и т.д.</string>
    <string name="perm_denied">Пожалуйста,предоставьте разрешения Приложению</string>
    <string name="open_settings_perm">Откройте настройки и дайте разрешения Приложению</string>
    <string name="perm_desc">Для восстановления пароля потребуются разрешения Приложению</string>
    <string name="permissions">разрешения</string>

    <!--Add password-->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_name">Название записи</string>
    <string name="comment">Комментарий</string>
    <string name="URL">URL</string>
    <string name="add_card_data">Создать запись о карте</string>
    <string name="bank_name">Банк</string>
    <string name="card_number">Карта</string>
    <string name="card_holder">Владелец карты</string>
    <string name="card_expiry_month">Срок действия (Месяц)</string>
    <string name="card_expiry_year">Срок действия (Год)</string>
    <string name="card_CVV">CVV</string>
    <string name="card_PIN">PIN</string>

    <!--Passwords-->
    <string name="note_name">Запись</string>
    <string name="note_number">номер записи</string>
    <string name="card_expiry_date">Срок действия карты</string>
    <string name="show_personal_data">показать перс.данные</string>
    <string name="show_bank_data">показать банк.данные</string>

    <!--Add user-->
    <string name="user_data">Данные пользователя</string>
    <string name="msg_user_data_assignment">Логин и Пароль - для входа в приложение\nТелефон и mail - для восстановления доступа</string>
    <string name="msg_add_user_login">Создайте Логин</string>
    <string name="phone">Номер телефона</string>
    <string name="mail">Mail</string>
    <string name="password_key_desc">Главный пароль</string>
    <string name="type_main_password_key">MainPassword</string>

    <!--General-->
    <string name="must_be">(обязательно)</string>
    <string name="add">Добавить</string>
    <string name="saved">Сохранено</string>
    <string name="no_data">Нет данных</string>
    <string name="no_digit_data">0000</string>
    <string name="check_correct_data">Проверьте корректность данных</string>
    <string name="incorrect">некорректно</string>
    <string name="bank_data">Запись банковской информации</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="restore_password">Забыли пароль</string>

    <!--Message-->
    <string name="msg_add_data">Заполните поле</string>
    <string name="msg_ok">OK</string>
    <string name="msg_add_user_data">Добавьте учетные данные</string>
    <string name="msg_user_data_desc">Учетные данные необходимы для доступа к записям,резервному копированию</string>
    <string name="msg_change_main_password">Измените главный пароль</string>
    <string name="msg_main_password_change_desc">Главный пароль должно быть:\n1) не менее 8 символов\n2) иметь буквы и цифры\n3) иметь символы,например, ! % № </string>
    <string name="msg_main_password_verified">Главный пароль надежный</string>
    <string name="msg_deleted">Удалено</string>

    <!--Settings-->
    <string name="update_user_data">Изменить данные учетной записи</string>
    <string name="use_fingerprint">Использовать отпечаток</string>
    <string name="use_fingerprint_desc">отпечаток пальца для входа в приложение</string>
    <string name="use_synchronization">Включить синхронизацию</string>
    <string name="use_synchronization_desc">Резервное копирование и хранение данных в облаке</string>
    <string name="app_info">О приложении</string>
    <string name="app_version">Версия</string>

    <!--authentication-->
    <string name="input">Вход</string>
    <string name="authentication">Авторизация</string>
    <string name="msg_error_auth">Неверный логин или пароль</string>
    <string name="send_to_mail">отправить на почту</string>
    <string name="send_to_phone">отправить на телефон</string>


</resources>
