<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:id="@+id/rlt_password_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:background="@drawable/background_blue"
                android:id="@+id/imView_icon_password"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_key_24dp"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/imView_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_below="@+id/imView_icon_password"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/background_blue"
                android:src="@drawable/ic_more_vert_24dp" />

            <TextView
                android:id="@+id/txt_key_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imView_options"
                android:layout_marginTop="16dp"
                android:text="@string/note_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/txt_key_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_key_title"
                android:text="@string/note_number"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <!--delimiter-->
            <View
                android:id="@+id/del_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/txt_key_name"
                android:background="@android:color/holo_orange_dark" />

            <LinearLayout
                android:id="@+id/lnl_switcher_show_personal_data"
                android:layout_below="@+id/del_1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_show_personal_data"
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lnl_switcher_show_personal_data"
                    android:text="@string/show_personal_data"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light" />

                <Switch
                    android:id="@+id/switch_show_personal_data"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_show_personal_data"
                    android:outlineAmbientShadowColor="@color/greenLight"/>

            </LinearLayout>

            <!--personal data-->
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnl_switcher_show_personal_data"
                android:text="@string/login"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_login"
                android:text="@string/password"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_password"
                android:text="@string/URL"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <!--delimiter-->
            <View
                android:id="@+id/del_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/txt_URL"
                android:background="@android:color/holo_orange_dark" />

            <LinearLayout
                android:id="@+id/lnl_switcher_show_bank_data"
                android:layout_below="@+id/del_2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_show_bank_data"
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lnl_switcher_show_bank_data"
                    android:text="@string/show_bank_data"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light" />

                <Switch
                    android:id="@+id/switch_show_bank_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_show_bank_data"
                    android:outlineAmbientShadowColor="@color/greenLight"/>

            </LinearLayout>

            <!-- bank info-->
            <TextView
                android:id="@+id/txt_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnl_switcher_show_bank_data"
                android:text="@string/bank_name"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_bank_name"
                android:text="@string/card_number"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_card_number"
                android:text="@string/card_holder"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_expiry_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_card_holder"
                android:text="@string/card_expiry_month"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_expiry_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_card_expiry_month"
                android:text="@string/card_expiry_year"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_PIN"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_card_expiry_year"
                android:text="@string/card_PIN"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_CVV"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_card_PIN"
                android:text="@string/card_CVV"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <!--delimiter-->
            <View
                android:id="@+id/del_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/txt_card_CVV"
                android:background="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/txt_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/del_3"
                android:text="@string/comment"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

