<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:id="@+id/rlt_password_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:background="@drawable/background_blue"
                android:id="@+id/imView_icon_password"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_key_24dp"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/imView_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_below="@+id/imView_icon_password"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/background_blue"
                android:src="@drawable/ic_more_vert_24dp" />

            <TextView
                android:id="@+id/txt_key_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imView_options"
                android:layout_marginTop="16dp"
                android:text="@string/key_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/txt_key_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_key_title"
                android:text="@string/key_number"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <!--delimiter-->
            <View
                android:id="@+id/del_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/txt_key_name"
                android:background="@android:color/holo_orange_dark" />

            <!--login/password/URL-->
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/del_1"
                android:text="@string/login"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_login"
                android:text="@string/password"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_URL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_password"
                android:text="@string/URL"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <!--delimiter-->
            <View
                android:id="@+id/del_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/txt_URL"
                android:background="@android:color/holo_orange_dark" />

            <!-- bank info-->
            <TextView
                android:id="@+id/txt_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/del_2"
                android:text="@string/bank_name"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_bank_name"
                android:text="@string/card_number"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_card_number"
                android:text="@string/card_holder"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_expiry_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_card_holder"
                android:text="@string/card_expiry_month"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_card_expiry_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_card_expiry_month"
                android:text="@string/card_expiry_year"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/lnl_card_PIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_card_expiry_year"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_card_PIN"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_PIN"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/imView_hide_PIN"
                    android:layout_gravity="left"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/background_gray"
                    android:padding="6dp"
                    android:src="@drawable/ic_visibility_off_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_card_CVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnl_card_PIN"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_card_CVV"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_CVV"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/imView_hide_CVV"
                    android:layout_gravity="left"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/background_gray"
                    android:padding="6dp"
                    android:src="@drawable/ic_visibility_off_24dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnl_card_CVV"
                android:text="@string/comment"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
