<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        tools:context=".activities.ActSettings"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id ="@+id/toolbar_settings"
            style="@style/Toolbar">

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical">

                <!--Security-->
                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="75dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/linl_switch_use_fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/backgroundColor"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/use_fingerprint"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="16dp"
                                android:textSize="18sp"/>

                            <Switch
                                android:id="@+id/switch_use_fingerprint"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:outlineAmbientShadowColor="@color/greenLight"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_fingerprint_desc"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="16dp"
                            android:textSize="12sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!--delimiter-->
                <View
                    android:id="@+id/view_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/greenLight" />

                <!--update user data-->
                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/linl_update_user_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/backgroundColor"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update_user_data"
                            android:gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="16dp"
                            android:textSize="18sp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!--delimiter-->
                <View
                    android:id="@+id/view_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/greenLight" />

                <!--Synchronization-->
                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/linl_switch_use_synchronization"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/backgroundColor"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/use_synchronization"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="16dp"
                                android:textSize="18sp"/>

                            <Switch
                                android:id="@+id/switch_use_synchronization"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:outlineAmbientShadowColor="@color/greenLight"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/use_synchronization_desc"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="16dp"
                            android:textSize="12sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!--delimiter-->
                <View
                    android:id="@+id/view_line_3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/greenLight" />

                <!--application info-->
                <androidx.cardview.widget.CardView
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/linl_app_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:background="@color/backgroundColor"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_info"
                            android:layout_gravity="center"
                            android:textSize="18sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_version"
                            android:layout_gravity="left"
                            android:layout_marginLeft="16dp"
                            android:textSize="18sp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

